--- a/.env.example
+++ b/.env.example
@@ -1,13 +1,13 @@
-APP_NAME=Laravel
+APP_NAME="Toolzz Chat backend"
 APP_ENV=local
 APP_KEY=
 APP_DEBUG=true
 APP_TIMEZONE=UTC
 APP_URL=http://localhost
 
-APP_LOCALE=en
-APP_FALLBACK_LOCALE=en
-APP_FAKER_LOCALE=en_US
+APP_LOCALE=pt-BR
+APP_FAKER_LOCALE=pt_BR
+APP_FALLBACK_LOCALE=br
 
 APP_MAINTENANCE_DRIVER=file
 # APP_MAINTENANCE_STORE=database
@@ -21,12 +21,12 @@ LOG_STACK=single
 LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
-DB_CONNECTION=sqlite
-# DB_HOST=127.0.0.1
-# DB_PORT=3306
-# DB_DATABASE=laravel
-# DB_USERNAME=root
-# DB_PASSWORD=
+DB_CONNECTION=mysql
+DB_HOST=mysql
+DB_PORT=3306
+DB_DATABASE=toolzz
+DB_USERNAME=sail
+DB_PASSWORD=
 
 SESSION_DRIVER=database
 SESSION_LIFETIME=120
@@ -34,7 +34,7 @@ SESSION_ENCRYPT=false
 SESSION_PATH=/
 SESSION_DOMAIN=null
 
-BROADCAST_CONNECTION=log
+BROADCAST_CONNECTION=pusher
 FILESYSTEM_DISK=local
 QUEUE_CONNECTION=database
 
@@ -44,13 +44,13 @@ CACHE_PREFIX=
 MEMCACHED_HOST=127.0.0.1
 
 REDIS_CLIENT=phpredis
-REDIS_HOST=127.0.0.1
+REDIS_HOST=redis
 REDIS_PASSWORD=null
 REDIS_PORT=6379
 
-MAIL_MAILER=log
-MAIL_HOST=127.0.0.1
-MAIL_PORT=2525
+MAIL_MAILER=smtp
+MAIL_HOST=mailpit
+MAIL_PORT=1025
 MAIL_USERNAME=null
 MAIL_PASSWORD=null
 MAIL_ENCRYPTION=null
@@ -65,8 +65,22 @@ AWS_USE_PATH_STYLE_ENDPOINT=false
 
 VITE_APP_NAME="${APP_NAME}"
 
+PASSPORT_CLIENT_ID=
+PASSPORT_CLIENT_SECRET=
+
+PUSHER_APP_ID=
+PUSHER_APP_KEY=
+PUSHER_APP_SECRET=
+PUSHER_HOST=
+PUSHER_PORT=443
+PUSHER_SCHEME="https"
+PUSHER_APP_CLUSTER="us2"
+
 #variables docker
-FORWARD_DB_PORT=
-APP_PORT=
-FORWARD_MAILPIT_PORT=
-FORWARD_MAILPIT_DASHBOARD_PORT=
+FORWARD_DB_PORT=3313
+APP_PORT=8087
+FORWARD_MAILPIT_PORT=1027
+FORWARD_MAILPIT_DASHBOARD_PORT=8030
+
+#front
+URL_FRONT=http://localhost:3000
